--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -7,7 +7,8 @@
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.9);
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 10%, rgba(171, 33, 38, 1) 50%, rgba(0, 0, 0, 1) 90%);
   color: rgb(240, 234, 234);
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
